<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment"
    android:background="@color/white"
    android:alpha="0.89">

    <LinearLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:gravity="center"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/photo"
            />

        <TextView
            android:id="@+id/textview_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="Username"
            android:textStyle="bold"
            android:textSize="30sp"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/whitesmoke"
        android:scrollbars="none"
        android:layout_marginTop="15dp"
        android:paddingTop="10dp"
        android:layout_below="@+id/profile_layout"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:padding="10dp">

                <!--email-->
                <TextView
                    android:id="@+id/textview_email_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="21sp"
                    android:textColor="@color/textProfile"
                    />

                <TextView
                    android:id="@+id/textview_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    />

                <View
                    android:layout_width="350dp"
                    android:layout_height="2dp"
                    android:background="@color/textProfile"
                    android:layout_marginTop="15dp"
                    />

                <!--Gender-->
                <TextView
                    android:id="@+id/textview_gender_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textSize="21sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/textProfile"
                    />

                <TextView
                    android:id="@+id/textview_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    />

                <View
                    android:layout_width="350dp"
                    android:layout_height="2dp"
                    android:background="@color/textProfile"
                    android:layout_marginTop="15dp"
                    />

                <!--DOB-->
                <TextView
                    android:id="@+id/textview_dob_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dob"
                    android:textSize="21sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/textProfile"
                    />

                <TextView
                    android:id="@+id/textview_dob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    />

                <View
                    android:layout_width="350sp"
                    android:layout_height="2dp"
                    android:background="@color/textProfile"
                    android:layout_marginTop="15dp"
                    />

                <!--Phone Num-->
                <TextView
                    android:id="@+id/textview_phone_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textSize="21sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/textProfile"
                    />

                <TextView
                    android:id="@+id/textview_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    />

                <View
                    android:layout_width="350dp"
                    android:layout_height="2dp"
                    android:background="@color/textProfile"
                    android:layout_marginTop="15dp"
                    />

                <!--Address-->
                <TextView
                    android:id="@+id/textview_address_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="21sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/textProfile"
                    />

                <TextView
                    android:id="@+id/textview_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    />

                <View
                    android:layout_width="350dp"
                    android:layout_height="2dp"
                    android:background="@color/textProfile"
                    android:layout_marginTop="15dp"
                    />

                <!--Description-->
                <TextView
                    android:id="@+id/textview_description_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="21sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/textProfile"
                    />

                <TextView
                    android:id="@+id/textview_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    />

                <View
                    android:layout_width="350dp"
                    android:layout_height="2dp"
                    android:background="@color/textProfile"
                    android:layout_marginTop="15dp"
                    />

                <!--Education-->

                <TextView
                    android:id="@+id/textview_education_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/education"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/textProfile"
                    />

                <TextView
                    android:id="@+id/textview_education"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    />

                <View
                    android:layout_width="350dp"
                    android:layout_height="2dp"
                    android:background="@color/textProfile"
                    android:layout_marginTop="15dp"
                    />

                <!--Working experience-->
                <TextView
                    android:id="@+id/textview_workingexp_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/working_exp"
                    android:textSize="21sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/textProfile"
                    />

                <TextView
                    android:id="@+id/textview_working_exp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    />

                <View
                    android:layout_width="350dp"
                    android:layout_height="2dp"
                    android:background="@color/textProfile"
                    android:layout_marginTop="15dp"
                    />

                <!--Volunteer certificate-->
                <TextView
                    android:id="@+id/textview_supporting_material_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/supporting_material"
                    android:textSize="21sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/textProfile"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <ImageView
                        android:id="@+id/imageview_supporting_material"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_marginTop="10dp"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:paddingLeft="60dp"
                        />

                </RelativeLayout>



                <View
                    android:layout_width="350dp"
                    android:layout_height="2dp"
                    android:background="@color/textProfile"
                    android:layout_marginTop="15dp"
                    />

                <!--Skill-->
                <TextView
                    android:id="@+id/textview_skill_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/skill"
                    android:textSize="21sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/textProfile"
                    />

                <TextView
                    android:id="@+id/textview_skill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    />

                <View
                    android:layout_width="350dp"
                    android:layout_height="2dp"
                    android:background="@color/textProfile"
                    android:layout_marginTop="15dp"
                    />



            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_update_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_circle_black_24dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp"/>
    </RelativeLayout>

</RelativeLayout>