<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/login_background"
        android:paddingTop="0pt"
        android:adjustViewBounds="true"/>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40dp"
        android:textColor="@color/white"
        android:fontFamily="monospace"
        android:gravity="center"
        android:layout_marginVertical="60dp"/>

    <TextView
        android:id="@+id/txt_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name"
        android:text="@string/txt_sign_in"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-black"
        android:gravity="center"/>

    <TextView
        android:id="@+id/txt_login_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_sign_in"
        android:text="@string/txt_login_sign"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-light"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="50dp"
        android:paddingHorizontal="20dp"
        android:paddingTop="30dp"
        android:paddingBottom="40dp"
        android:layout_below="@id/txt_login_sign"
        android:background="@drawable/rounded_whitesmoke_rect"
        >

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-medium"/>

        <EditText
            android:id="@+id/edittext_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edittext_radius"
            android:layout_below="@id/email"/>

        <TextView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:fontFamily="sans-serif-medium"
            android:layout_marginVertical="10dp"
            android:layout_below="@id/email"/>

        <EditText
            android:id="@+id/edittext_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edittext_radius"
            android:layout_below="@id/password"
            />

        <LinearLayout
            android:id="@+id/button_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_below="@id/password">

            <TextView
                android:id="@+id/signup_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dont have account?"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:fontFamily="sans-serif-thin"/>

            <TextView
                android:id="@+id/signup_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Sign Up"
                android:textColor="@color/red"
                android:textSize="15dp"
                android:fontFamily="sans-serif-thin"/>

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_red_rect"
        android:text="@string/txt_sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:paddingHorizontal="50dp"
        android:layout_alignTop="@id/login_form"
        android:layout_marginTop="240dp"/>

</RelativeLayout>